<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/login_in"
            android:icon="@mipmap/ic_lock_black_24dp"
            android:title="@string/drawer_in"/>
        <item
            android:id="@+id/nav_favorite"
            android:icon="@mipmap/ic_local_offer_black_24dp"
            android:title="@string/drawer1" />
        <item
            android:id="@+id/nav_map"
            android:icon="@mipmap/ic_map_black_24dp"
            android:title="@string/drawer2" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/drawer3" />
        <item
            android:id="@+id/nav_opinion"
            android:icon="@mipmap/ic_message_black_24dp"
            android:title="@string/drawer4" />
    </group>
</menu>
