<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:weightSum="1">
    <TextView
        android:layout_width="333dp"
        android:layout_height="wrap_content"
        android:text="@string/location_chinese_name"
        android:textSize="20sp"
        android:id="@+id/textView1"
        android:textStyle="bold"
        android:textColor="#4689C8" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/location_ch"
        android:textSize="15sp"
        android:inputType="text" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/location_english_name"
        android:textSize="20sp"
        android:id="@+id/textView2"
        android:textStyle="bold"
        android:textColor="#4689C8"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/location_en"
        android:textSize="15sp"
        android:inputType="text" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tag_name"
        android:textSize="20sp"
        android:id="@+id/textView3"
        android:textStyle="bold"
        android:textColor="#4689C8"/>
    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tag_spinner"/>-
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="20sp"
        android:id="@+id/textView5"
        android:textStyle="bold"
        android:textColor="#4689C8"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/location_description"
        android:textSize="15sp"
        android:inputType="text" />
</LinearLayout>